--- a/index.html
+++ b/index.html
@@ -4,14 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Финансовый учёт под ключ — Абакан</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <style>
     body { font-family: 'Segoe UI', sans-serif; margin: 0; padding: 0; background: #f2f5f9; color: #333; }
-    header { background: linear-gradient(135deg, #007bff, #00c6ff); color: #fff; padding: 40px 20px; text-align: center; }
-    header h1 { margin: 0; font-size: 36px; }
-    header p { margin-top: 10px; font-size: 20px; }
+    header {
+      background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('https://img.freepik.com/free-vector/accounting-concept-illustration_114360-2156.jpg');
+      background-size: cover;
+      background-position: center;
+      color: #fff;
+      padding: 60px 20px;
+      text-align: center;
+    }
+    header h1 { margin: 0; font-size: 42px; text-shadow: 0 2px 6px rgba(0,0,0,0.6); }
+    header p { margin-top: 15px; font-size: 22px; text-shadow: 0 2px 4px rgba(0,0,0,0.5); }
     section { max-width: 1000px; margin: 30px auto; padding: 0 20px; }
     .block { background: #fff; padding: 30px; margin-bottom: 25px; border-radius: 12px; box-shadow: 0 3px 12px rgba(0,0,0,0.07); }
-    h2 { margin-top: 0; color: #007bff; }
+    h2 { margin-top: 0; color: #007bff; display: flex; align-items: center; gap: 10px; }
     ul { padding-left: 20px; }
     .cta { text-align: center; margin: 50px 0; }
     .cta a { background: #28a745; color: white; text-decoration: none; padding: 18px 36px; font-size: 20px; border-radius: 8px; transition: background 0.3s; }
@@ -32,7 +40,7 @@
 
   <section>
     <div class="block">
-      <h2>Что входит в услугу?</h2>
+      <h2><i class="bi bi-journal-text"></i> Что входит в услугу?</h2>
       <p>Вы получаете полноценное ведение финансов малого бизнеса: без головной боли, с полным контролем и прозрачностью.</p>
       <ul>
         <li>Ведение доходов и расходов</li>
@@ -42,13 +50,13 @@
         <li>Налоговое планирование и оптимизация</li>
       </ul>
       <div class="images">
-        <img src="https://tse1.mm.bing.net/th/id/OIP.EnmHY9SSic6uKrct_vSi5QHaFi?pid=Api" alt="Калькулятор и отчёт">
-        <img src="https://tse3.mm.bing.net/th/id/OIP.Q3UTyZLPbW0VZZoaRYJj9QHaE8?pid=Api" alt="Калькулятор и чек">
+        <img src="https://cdn-icons-png.flaticon.com/512/4334/4334952.png" alt="Калькулятор и отчёт">
+        <img src="https://cdn-icons-png.flaticon.com/512/3184/3184726.png" alt="Калькулятор и чек">
       </div>
     </div>
 
     <div class="block">
-      <h2>Почему выбирают нас?</h2>
+      <h2><i class="bi bi-check2-circle"></i> Почему выбирают нас?</h2>
       <p>С 2017 года мы помогаем малому бизнесу расти, освобождая владельцев от рутинной бумажной волокиты.</p>
       <ul>
         <li>Работаем только с малым бизнесом — знаем ваши задачи</li>
@@ -59,7 +67,7 @@
     </div>
 
     <div class="block">
-      <h2>Отзывы клиентов</h2>
+      <h2><i class="bi bi-emoji-smile"></i> Отзывы клиентов</h2>
       <div class="testimonial">
         <img src="https://randomuser.me/api/portraits/women/65.jpg" alt="Ольга">
         <div>
@@ -77,7 +85,7 @@
     </div>
 
     <div class="block">
-      <h2>Сколько стоит?</h2>
+      <h2><i class="bi bi-cash-coin"></i> Сколько стоит?</h2>
       <p>Стоимость начинается от <strong>5 000 ₽ в месяц</strong>. Точная сумма рассчитывается индивидуально — в зависимости от объёма документов и специфики вашей деятельности.</p>
     </div>
 
