--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <li>Налоговое планирование и оптимизация</li>
       </ul>
       <div class="images">
-        <img src="https://cdn-icons-png.flaticon.com/512/4334/4334952.png" alt="Калькулятор и отчёт">
-        <img src="https://cdn-icons-png.flaticon.com/512/3184/3184726.png" alt="Калькулятор и чек">
+        <img src="https://tse1.mm.bing.net/th/id/OIP.EnmHY9SSic6uKrct_vSi5QHaFi?pid=Api" alt="Калькулятор и отчёт">
+        <img src="https://tse3.mm.bing.net/th/id/OIP.Q3UTyZLPbW0VZZoaRYJj9QHaE8?pid=Api" alt="Калькулятор и чек">
       </div>
     </div>
 
